Add: DB 초기세팅 & 레이어 분리 & 컨텐츠 조회 기능 추가

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SERVE_ADDR=":5555"
-DB_CONN="root:1234@tcp(127.0.0.1:3306)/asdf?charset=utf8mb4&parseTime=True&loc=UTC"
+DB_CONN="root:@tcp(127.0.0.1:3306)/stockfolio?charset=utf8mb4&parseTime=True&loc=UTC"
